--- a/versions.properties
+++ b/versions.properties
@@ -6,12 +6,15 @@
 ####
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
+####
+#### NOTE: Some versions are filtered by the rejectVersionsIf predicate. See the settings.gradle.kts file.
 ## unused
 version.androidx.appcompat=1.3.1
 ## unused
 version.androidx.constraintlayout=2.1.0
 ## unused
 version.androidx.core=1.6.0
+
 ## unused
 version.androidx.test.espresso=3.4.0
 ## unused
@@ -20,5 +23,19 @@ version.androidx.test.ext.junit=1.1.3
 version.google.android.material=1.4.0
 ## unused
 version.junit.junit=4.+
-## unused
-version.org.jacoco..org.jacoco.ant=0.8.3
+version.androidx.hilt=1.0.0
+version.androidx.hilt-lifecycle-viewmodel=1.0.0-alpha03
+version.androidx.hilt-navigation-compose=1.0.0-alpha03
+version.androidx.lifecycle=2.3.1
+version.androidx.startup=1.1.0
+version.com.facebook.stetho..stetho=1.5.1
+version.com.facebook.stetho..stetho-okhttp3=1.5.1
+version.com.github.chuckerteam.chucker..library=3.5.2
+version.com.jakewharton.timber..timber=5.0.1
+version.google.dagger=2.38.1
+version.kotlin=1.5.30
+version.kotlinx.coroutines=1.5.1
+version.okhttp3=4.9.0
+version.retrofit2=2.9.0
+version.firebase-analytics-ktx=19.0.1
+version.firebase-crashlytics-ktx=18.2.1
