--- a/versions.properties
+++ b/versions.properties
@@ -8,6 +8,7 @@
 #### suppress inspection "UnusedProperty" for whole file
 ####
 #### NOTE: Some versions are filtered by the rejectVersionsIf predicate. See the settings.gradle.kts file.
+
 ## unused
 version.androidx.appcompat=1.3.1
 ## unused
@@ -39,3 +40,4 @@ version.okhttp3=4.9.0
 version.retrofit2=2.9.0
 version.firebase-analytics-ktx=19.0.1
 version.firebase-crashlytics-ktx=18.2.1
+version.androidx.room=2.3.0
