--- a/versions.properties
+++ b/versions.properties
@@ -11,6 +11,7 @@
 
 ## unused
 version.androidx.appcompat=1.3.1
+
 ## unused
 version.androidx.constraintlayout=2.1.0
 ## unused
@@ -41,3 +42,4 @@ version.retrofit2=2.9.0
 version.firebase-analytics-ktx=19.0.1
 version.firebase-crashlytics-ktx=18.2.1
 version.androidx.room=2.3.0
+version.androidx.navigation=2.3.5
