--- a/versions.properties
+++ b/versions.properties
@@ -14,6 +14,7 @@ version.androidx.appcompat=1.3.1
 
 ## unused
 version.androidx.constraintlayout=2.1.0
+
 ## unused
 version.androidx.core=1.6.0
 
@@ -43,3 +44,7 @@ version.firebase-analytics-ktx=19.0.1
 version.firebase-crashlytics-ktx=18.2.1
 version.androidx.room=2.3.0
 version.androidx.navigation=2.3.5
+version.androidx.cardview=1.0.0
+version.androidx.databinding=7.0.2
+version.androidx.legacy=1.0.0
+version.org.jacoco..org.jacoco.ant=0.8.3
