--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
   <application
     android:allowBackup="true"
     android:icon="@mipmap/ic_launcher"
+    android:name=".VoiceNotesApplication"
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
@@ -25,7 +26,7 @@
       android:name="androidx.startup.InitializationProvider"
       tools:node="merge">
       <meta-data
-        android:name="com.nirmaljeffrey.dev.voicenotes.intiliazers.TimberInitializer"
+        android:name="com.nirmaljeffrey.dev.voicenotes.di.intiliazers.TimberInitializer"
         android:value="androidx.startup" />
     </provider>
   </application>
